2009-07-08  Markus Gutschke  <markus@shellinabox.com>

	* Optionally compress large responses, if the browser accepts
	deflate compression. This mainly improves start up time.

	* More fine tuning of the regular expressions that detect URLs.
	We now allow '.' and ',' in URLs, as long as they are not at the
	very end of the URL, where they would probably be part of the
	enclosing sentence and not actually part of the URL.

2009-07-06  Markus Gutschke  <markus@shellinabox.com>

	* Making it easier to host the terminal on non-root URLs by always
	redirecting to a URL that includes a trailing slash.

	* Run-time testing for availability of libpthread functions does not
	  work reliably on some platforms. So, avoid doing so on anything
	  other than Linux/i386. For all other platforms, assume that the code
	  is not linked against libpthread. For ShellInABox, this is always
	  the correct assumption. But if the code gets embedded into other
	  projects, this might have to be changed.

2009-07-05  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.9

2009-07-04  Markus Gutschke  <markus@shellinabox.com>

	* Refined regular expressions for finding URLs.

	* Show new terminal size when resizing the browser.

	* Restored compatibility with IE5 and IE6.

2009-07-03  Markus Gutschke  <markus@shellinabox.com>

	* Added --linkify option. Default settings cause the terminal to
	recognize fully qualified URLs and to make them clickable.

2009-06-28  Markus Gutschke  <markus@shellinabox.com>

	* Added support for keyboards that have a dedicated "<" / ">" key.

2009-06-21  Markus Gutschke  <markus@shellinabox.com>

	* Added --localhost option.

	* Added support for building on ARM.

	* Respect "Connection: close" for proxies that rely on pre-HTTP/1.1
	behavior.

2009-05-24  Markus Gutschke  <markus@shellinabox.com>

	* Added SSL support for OpenBSD

2009-05-23  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.8
